neocore2/third_party/joltc-sys/JoltC/JoltC/Functions.h

////////////////////////////////////////////////////////////////////////////////
// Primitive types

typedef struct JPC_Float3 {
	float x;
	float y;
	float z;
} JPC_Float3;
	typedef JPC_DVec3 JPC_RVec3;
	typedef JPC_Vec3 JPC_RVec3;
	typedef uint16_t JPC_ObjectLayer;
	typedef uint32_t JPC_ObjectLayer;
typedef struct JPC_RRayCast {
	JPC_RVec3 Origin;
	JPC_Vec3 Direction;
} JPC_RRayCast;
typedef struct JPC_RayCastResult {
	JPC_BodyID BodyID;
	float Fraction;
	JPC_SubShapeID SubShapeID2;
} JPC_RayCastResult;
typedef struct JPC_Body JPC_Body;
////////////////////////////////////////////////////////////////////////////////
// BroadPhaseLayerInterface

typedef struct JPC_BroadPhaseLayerInterfaceFns {
	uint (*GetNumBroadPhaseLayers)(const void *self);
	JPC_BroadPhaseLayer (*GetBroadPhaseLayer)(const void *self, JPC_ObjectLayer inLayer);
} JPC_BroadPhaseLayerInterfaceFns;
////////////////////////////////////////////////////////////////////////////////
// BroadPhaseLayerFilter

typedef struct JPC_BroadPhaseLayerFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_BroadPhaseLayer inLayer);
} JPC_BroadPhaseLayerFilterFns;
////////////////////////////////////////////////////////////////////////////////
// ObjectLayerFilter

typedef struct JPC_ObjectLayerFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_ObjectLayer inLayer);
} JPC_ObjectLayerFilterFns;
////////////////////////////////////////////////////////////////////////////////
// BodyFilter

typedef struct JPC_BodyFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_BodyID inBodyID);
	bool (*ShouldCollideLocked)(const void *self, const JPC_Body *inBodyID);
} JPC_BodyFilterFns;
////////////////////////////////////////////////////////////////////////////////
// ObjectVsBroadPhaseLayerFilter

typedef struct JPC_ObjectVsBroadPhaseLayerFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_ObjectLayer inLayer1, JPC_BroadPhaseLayer inLayer2);
} JPC_ObjectVsBroadPhaseLayerFilterFns;
////////////////////////////////////////////////////////////////////////////////
// ObjectLayerPairFilter

typedef struct JPC_ObjectLayerPairFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_ObjectLayer inLayer1, JPC_ObjectLayer inLayer2);
} JPC_ObjectLayerPairFilterFns;