neocore2/third_party/joltc-sys/src/bindings_static.rs

use std::os::raw::{c_char, c_int, c_uint, c_void};

pub const JPC_PI: f32 = 3.14159265358979323846f32;
pub const JPC_MAX_PHYSICS_JOBS: c_int = 2048;
pub const JPC_MAX_PHYSICS_BARRIERS: c_int = 8;


// JoltC enum aliases intentionally kept as primitive C ABI-compatible
// aliases. The checked-in bindings are included inside `generated.rs`;
// crate/module-level allow attributes live there, not in this generated body.
pub type JPC_PhysicsUpdateError = u32;
pub const JPC_PHYSICS_UPDATE_ERROR_NONE: JPC_PhysicsUpdateError = 0;
pub const JPC_PHYSICS_UPDATE_ERROR_MANIFOLD_CACHE_FULL: JPC_PhysicsUpdateError = 1 << 0;
pub const JPC_PHYSICS_UPDATE_ERROR_BODY_PAIR_CACHE_FULL: JPC_PhysicsUpdateError = 1 << 1;
pub const JPC_PHYSICS_UPDATE_ERROR_CONTACT_CONSTRAINTS_FULL: JPC_PhysicsUpdateError = 1 << 2;

pub type JPC_ShapeColor = c_int;
pub const JPC_SHAPE_COLOR_INSTANCE_COLOR: JPC_ShapeColor = 0;
pub const JPC_SHAPE_COLOR_SHAPE_TYPE_COLOR: JPC_ShapeColor = 1;
pub const JPC_SHAPE_COLOR_MOTION_TYPE_COLOR: JPC_ShapeColor = 2;
pub const JPC_SHAPE_COLOR_SLEEP_COLOR: JPC_ShapeColor = 3;
pub const JPC_SHAPE_COLOR_ISLAND_COLOR: JPC_ShapeColor = 4;
pub const JPC_SHAPE_COLOR_MATERIAL_COLOR: JPC_ShapeColor = 5;

pub type JPC_ShapeType = u8;
pub const JPC_SHAPE_TYPE_CONVEX: JPC_ShapeType = 0;
pub const JPC_SHAPE_TYPE_COMPOUND: JPC_ShapeType = 1;
pub const JPC_SHAPE_TYPE_DECORATED: JPC_ShapeType = 2;
pub const JPC_SHAPE_TYPE_MESH: JPC_ShapeType = 3;
pub const JPC_SHAPE_TYPE_HEIGHT_FIELD: JPC_ShapeType = 4;
pub const JPC_SHAPE_TYPE_SOFTBODY: JPC_ShapeType = 5;
pub const JPC_SHAPE_TYPE_USER1: JPC_ShapeType = 6;
pub const JPC_SHAPE_TYPE_USER2: JPC_ShapeType = 7;
pub const JPC_SHAPE_TYPE_USER3: JPC_ShapeType = 8;
pub const JPC_SHAPE_TYPE_USER4: JPC_ShapeType = 9;

pub type JPC_ShapeSubType = u8;
pub const JPC_SHAPE_SUB_TYPE_SPHERE: JPC_ShapeSubType = 0;
pub const JPC_SHAPE_SUB_TYPE_BOX: JPC_ShapeSubType = 1;
pub const JPC_SHAPE_SUB_TYPE_TRIANGLE: JPC_ShapeSubType = 2;
pub const JPC_SHAPE_SUB_TYPE_CAPSULE: JPC_ShapeSubType = 3;
pub const JPC_SHAPE_SUB_TYPE_TAPEREDCAPSULE: JPC_ShapeSubType = 4;
pub const JPC_SHAPE_SUB_TYPE_CYLINDER: JPC_ShapeSubType = 5;
pub const JPC_SHAPE_SUB_TYPE_CONVEX_HULL: JPC_ShapeSubType = 6;
pub const JPC_SHAPE_SUB_TYPE_STATIC_COMPOUND: JPC_ShapeSubType = 7;
pub const JPC_SHAPE_SUB_TYPE_MUTABLE_COMPOUND: JPC_ShapeSubType = 8;
pub const JPC_SHAPE_SUB_TYPE_ROTATED_TRANSLATED: JPC_ShapeSubType = 9;
pub const JPC_SHAPE_SUB_TYPE_SCALED: JPC_ShapeSubType = 10;
pub const JPC_SHAPE_SUB_TYPE_OFFSET_CENTER_OF_MASS: JPC_ShapeSubType = 11;
pub const JPC_SHAPE_SUB_TYPE_MESH: JPC_ShapeSubType = 12;
pub const JPC_SHAPE_SUB_TYPE_HEIGHT_FIELD: JPC_ShapeSubType = 13;
pub const JPC_SHAPE_SUB_TYPE_SOFT_BODY: JPC_ShapeSubType = 14;
pub const JPC_SHAPE_SUB_TYPE_USER1: JPC_ShapeSubType = 15;
pub const JPC_SHAPE_SUB_TYPE_USER2: JPC_ShapeSubType = 16;
pub const JPC_SHAPE_SUB_TYPE_USER3: JPC_ShapeSubType = 17;
pub const JPC_SHAPE_SUB_TYPE_USER4: JPC_ShapeSubType = 18;
pub const JPC_SHAPE_SUB_TYPE_USER5: JPC_ShapeSubType = 19;
pub const JPC_SHAPE_SUB_TYPE_USER6: JPC_ShapeSubType = 20;
pub const JPC_SHAPE_SUB_TYPE_USER7: JPC_ShapeSubType = 21;
pub const JPC_SHAPE_SUB_TYPE_USER8: JPC_ShapeSubType = 22;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX1: JPC_ShapeSubType = 23;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX2: JPC_ShapeSubType = 24;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX3: JPC_ShapeSubType = 25;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX4: JPC_ShapeSubType = 26;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX5: JPC_ShapeSubType = 27;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX6: JPC_ShapeSubType = 28;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX7: JPC_ShapeSubType = 29;
pub const JPC_SHAPE_SUB_TYPE_USER_CONVEX8: JPC_ShapeSubType = 30;

pub type JPC_ConstraintType = u32;
pub const JPC_CONSTRAINT_TYPE_CONSTRAINT: JPC_ConstraintType = 0;
pub const JPC_CONSTRAINT_TYPE_TWO_BODY_CONSTRAINT: JPC_ConstraintType = 1;

pub type JPC_ConstraintSubType = u32;
pub const JPC_CONSTRAINT_SUB_TYPE_FIXED: JPC_ConstraintSubType = 0;
pub const JPC_CONSTRAINT_SUB_TYPE_POINT: JPC_ConstraintSubType = 1;
pub const JPC_CONSTRAINT_SUB_TYPE_HINGE: JPC_ConstraintSubType = 2;
pub const JPC_CONSTRAINT_SUB_TYPE_SLIDER: JPC_ConstraintSubType = 3;
pub const JPC_CONSTRAINT_SUB_TYPE_DISTANCE: JPC_ConstraintSubType = 4;
pub const JPC_CONSTRAINT_SUB_TYPE_CONE: JPC_ConstraintSubType = 5;
pub const JPC_CONSTRAINT_SUB_TYPE_SWING_TWIST: JPC_ConstraintSubType = 6;
pub const JPC_CONSTRAINT_SUB_TYPE_SIX_DOF: JPC_ConstraintSubType = 7;
pub const JPC_CONSTRAINT_SUB_TYPE_PATH: JPC_ConstraintSubType = 8;
pub const JPC_CONSTRAINT_SUB_TYPE_VEHICLE: JPC_ConstraintSubType = 9;
pub const JPC_CONSTRAINT_SUB_TYPE_RACK_AND_PINION: JPC_ConstraintSubType = 10;
pub const JPC_CONSTRAINT_SUB_TYPE_GEAR: JPC_ConstraintSubType = 11;
pub const JPC_CONSTRAINT_SUB_TYPE_PULLEY: JPC_ConstraintSubType = 12;
pub const JPC_CONSTRAINT_SUB_TYPE_USER1: JPC_ConstraintSubType = 13;
pub const JPC_CONSTRAINT_SUB_TYPE_USER2: JPC_ConstraintSubType = 14;
pub const JPC_CONSTRAINT_SUB_TYPE_USER3: JPC_ConstraintSubType = 15;
pub const JPC_CONSTRAINT_SUB_TYPE_USER4: JPC_ConstraintSubType = 16;

pub type JPC_ConstraintSpace = u32;
pub const JPC_CONSTRAINT_SPACE_LOCAL_TO_BODY_COM: JPC_ConstraintSpace = 0;
pub const JPC_CONSTRAINT_SPACE_WORLD_SPACE: JPC_ConstraintSpace = 1;

pub type JPC_MotionType = u8;
pub const JPC_MOTION_TYPE_STATIC: JPC_MotionType = 0;
pub const JPC_MOTION_TYPE_KINEMATIC: JPC_MotionType = 1;
pub const JPC_MOTION_TYPE_DYNAMIC: JPC_MotionType = 2;

pub type JPC_MotionQuality = u8;
pub const JPC_MOTION_QUALITY_DISCRETE: JPC_MotionQuality = 0;
pub const JPC_MOTION_QUALITY_LINEAR_CAST: JPC_MotionQuality = 1;

pub type JPC_OverrideMassProperties = u8;
pub const JPC_OVERRIDE_MASS_PROPS_CALC_MASS_INERTIA: JPC_OverrideMassProperties = 0;
pub const JPC_OVERRIDE_MASS_PROPS_CALC_INERTIA: JPC_OverrideMassProperties = 1;
pub const JPC_OVERRIDE_MASS_PROPS_MASS_INERTIA_PROVIDED: JPC_OverrideMassProperties = 2;

pub type JPC_GroundState = u32;
pub const JPC_CHARACTER_GROUND_STATE_ON_GROUND: JPC_GroundState = 0;
pub const JPC_CHARACTER_GROUND_STATE_ON_STEEP_GROUND: JPC_GroundState = 1;
pub const JPC_CHARACTER_GROUND_STATE_NOT_SUPPORTED: JPC_GroundState = 2;
pub const JPC_CHARACTER_GROUND_STATE_IN_AIR: JPC_GroundState = 3;

pub type JPC_Activation = u32;
pub const JPC_ACTIVATION_ACTIVATE: JPC_Activation = 0;
pub const JPC_ACTIVATION_DONT_ACTIVATE: JPC_Activation = 1;

pub type JPC_ValidateResult = u32;
pub const JPC_VALIDATE_RESULT_ACCEPT_ALL_CONTACTS: JPC_ValidateResult = 0;
pub const JPC_VALIDATE_RESULT_ACCEPT_CONTACT: JPC_ValidateResult = 1;
pub const JPC_VALIDATE_RESULT_REJECT_CONTACT: JPC_ValidateResult = 2;
pub const JPC_VALIDATE_RESULT_REJECT_ALL_CONTACTS: JPC_ValidateResult = 3;

pub type JPC_BackFaceMode = u8;
pub const JPC_BACK_FACE_IGNORE: JPC_BackFaceMode = 0;
pub const JPC_BACK_FACE_COLLIDE: JPC_BackFaceMode = 1;

pub type JPC_BodyType = u8;
pub const JPC_BODY_TYPE_RIGID_BODY: JPC_BodyType = 0;
pub const JPC_BODY_TYPE_SOFT_BODY: JPC_BodyType = 1;

pub type JPC_AllowedDOFs = u8;
pub const JPC_ALLOWED_DOFS_NONE: JPC_AllowedDOFs = 0;
pub const JPC_ALLOWED_DOFS_ALL: JPC_AllowedDOFs = 63;
pub const JPC_ALLOWED_DOFS_TRANSLATIONX: JPC_AllowedDOFs = 1;
pub const JPC_ALLOWED_DOFS_TRANSLATIONY: JPC_AllowedDOFs = 2;
pub const JPC_ALLOWED_DOFS_TRANSLATIONZ: JPC_AllowedDOFs = 4;
pub const JPC_ALLOWED_DOFS_ROTATIONX: JPC_AllowedDOFs = 8;
pub const JPC_ALLOWED_DOFS_ROTATIONY: JPC_AllowedDOFs = 16;
pub const JPC_ALLOWED_DOFS_ROTATIONZ: JPC_AllowedDOFs = 32;
pub const JPC_ALLOWED_DOFS_PLANE2D: JPC_AllowedDOFs = 35;

pub type JPC_Features = u32;
pub const JPC_FEATURE_DOUBLE_PRECISION: JPC_Features = 1;
pub const JPC_FEATURE_NEON: JPC_Features = 2;
pub const JPC_FEATURE_SSE: JPC_Features = 4;
pub const JPC_FEATURE_SSE4_1: JPC_Features = 8;
pub const JPC_FEATURE_SSE4_2: JPC_Features = 16;
pub const JPC_FEATURE_AVX: JPC_Features = 32;
pub const JPC_FEATURE_AVX2: JPC_Features = 64;
pub const JPC_FEATURE_AVX512: JPC_Features = 128;
pub const JPC_FEATURE_F16C: JPC_Features = 256;
pub const JPC_FEATURE_LZCNT: JPC_Features = 512;
pub const JPC_FEATURE_TZCNT: JPC_Features = 1024;
pub const JPC_FEATURE_FMADD: JPC_Features = 2048;
pub const JPC_FEATURE_PLATFORM_DETERMINISTIC: JPC_Features = 4096;
pub const JPC_FEATURE_FLOATING_POINT_EXCEPTIONS: JPC_Features = 8192;
pub const JPC_FEATURE_DEBUG: JPC_Features = 16384;

pub type JPC_BodyID = u32;
pub type JPC_SubShapeID = u32;
pub type JPC_BroadPhaseLayer = u8;
#[cfg(feature = "object-layer-u32")] pub type JPC_ObjectLayer = u32;
#[cfg(not(feature = "object-layer-u32"))] pub type JPC_ObjectLayer = u16;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_Float3 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
}

#[repr(C, align(16))]
#[derive(Debug, Copy, Clone)]
pub struct JPC_Vec3 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub _w: f32,
}

#[repr(C, align(16))]
#[derive(Debug, Copy, Clone)]
pub struct JPC_Vec4 {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub w: f32,
}

#[repr(C, align(32))]
#[derive(Debug, Copy, Clone)]
pub struct JPC_DVec3 {
    pub x: f64,
    pub y: f64,
    pub z: f64,
    pub _w: f64,
}

#[repr(C, align(16))]
#[derive(Debug, Copy, Clone)]
pub struct JPC_Quat {
    pub x: f32,
    pub y: f32,
    pub z: f32,
    pub w: f32,
}

#[repr(C, align(16))]
#[derive(Debug, Copy, Clone)]
pub struct JPC_Mat44 {
    pub matrix: [JPC_Vec4; 4],
}

#[repr(C, align(32))]
#[derive(Debug, Copy, Clone)]
pub struct JPC_DMat44 {
    pub col: [JPC_Vec4; 3],
    pub col3: JPC_DVec3,
}

#[repr(C, align(4))]
#[derive(Debug, Copy, Clone)]
pub struct JPC_Color {
    pub r: u8,
    pub g: u8,
    pub b: u8,
    pub a: u8,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_IndexedTriangleNoMaterial {
    pub idx: [u32; 3],
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_IndexedTriangle {
    pub idx: [u32; 3],
    pub materialIndex: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_RayCast {
    pub Origin: JPC_Vec3,
    pub Direction: JPC_Vec3,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_RRayCast {
    pub Origin: JPC_RVec3,
    pub Direction: JPC_Vec3,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_RayCastResult {
    pub BodyID: JPC_BodyID,
    pub Fraction: f32,
    pub SubShapeID2: JPC_SubShapeID,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_BroadPhaseLayerInterfaceFns {
    pub GetNumBroadPhaseLayers: Option<unsafe extern "C" fn(*const c_void) -> c_uint>, 
    pub GetBroadPhaseLayer: Option<unsafe extern "C" fn(*const c_void, JPC_ObjectLayer) -> JPC_BroadPhaseLayer>, 
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_BroadPhaseLayerFilterFns {
    pub ShouldCollide: Option<unsafe extern "C" fn(*const c_void, JPC_BroadPhaseLayer) -> bool>, 
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_ObjectLayerFilterFns {
    pub ShouldCollide: Option<unsafe extern "C" fn(*const c_void, JPC_ObjectLayer) -> bool>, 
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_BodyFilterFns {
    pub ShouldCollide: Option<unsafe extern "C" fn(*const c_void, JPC_BodyID) -> bool>, 
    pub ShouldCollideLocked: Option<unsafe extern "C" fn(*const c_void, *const JPC_Body) -> bool>, 
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_ObjectVsBroadPhaseLayerFilterFns {
    pub ShouldCollide: Option<unsafe extern "C" fn(*const c_void, JPC_ObjectLayer, JPC_BroadPhaseLayer) -> bool>, 
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPC_ObjectLayerPairFilterFns {
    pub ShouldCollide: Option<unsafe extern "C" fn(*const c_void, JPC_ObjectLayer, JPC_ObjectLayer) -> bool>, 
}
